Add role-based access control with USER and ADMIN roles
Implement RBAC to restrict admin features (job run history, FX rate refresh)
to admin users only. New users default to USER role; admins must be promoted
manually via database for security.

Backend:
- Add Role enum (USER/ADMIN) and role column to users table
- Include role in JWT claims and auth responses
- Enable method security with @PreAuthorize for admin endpoints
- Create AdminController with job-runs endpoints
- Protect FX rates refresh endpoint with admin role check

Frontend:
- Add isAdmin computed property to auth store
- Implement admin route guard for /admin/* routes
- Create JobRunsView with paginated job history
- Show admin menu items only to admin users
- Hide FX refresh button from non-admin users

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>