@@ -7,20 +7,32 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+/**
+ * Unit tests for {@link JwtService}.
+ *
+ * <p>Tests JWT token generation, validation, and claim extraction
+ * including role-based claims.</p>
+ *
+ * @author Generated
+ * @since 1.0
+ */
 @DisplayName("JwtService")
 class JwtServiceTest {
 
     private JwtService jwtService;
     private UserDetails userDetails;
+    private UserDetails adminUserDetails;
 
     private static final String SECRET = "test-jwt-secret-key-for-unit-tests-only-32chars";
     private static final long EXPIRATION = 86400000L; // 24 hours
@@ -36,7 +48,13 @@ class JwtServiceTest {
         userDetails = User.builder()
                 .username("test@example.com")
                 .password("password")
-                .authorities(Collections.emptyList())
+                .authorities(List.of(new SimpleGrantedAuthority("ROLE_USER")))
+                .build();
+
+        adminUserDetails = User.builder()
+                .username("admin@example.com")
+                .password("password")
+                .authorities(List.of(new SimpleGrantedAuthority("ROLE_ADMIN")))
                 .build();
     }
 
@@ -73,13 +91,49 @@ class JwtServiceTest {
             UserDetails anotherUser = User.builder()
                     .username("another@example.com")
                     .password("password")
-                    .authorities(Collections.emptyList())
+                    .authorities(List.of(new SimpleGrantedAuthority("ROLE_USER")))
                     .build();
 
             String token1 = jwtService.generateToken(userDetails);
             String token2 = jwtService.generateToken(anotherUser);
 
             assertNotEquals(token1, token2);
+        }
+
+        @Test
+        @DisplayName("should include USER role claim in generated token")
+        void shouldIncludeUserRoleClaimInGeneratedToken() {
+            String token = jwtService.generateToken(userDetails);
+
+            String role = jwtService.extractRole(token);
+
+            assertEquals("USER", role);
+        }
+
+        @Test
+        @DisplayName("should include ADMIN role claim in generated token")
+        void shouldIncludeAdminRoleClaimInGeneratedToken() {
+            String token = jwtService.generateToken(adminUserDetails);
+
+            String role = jwtService.extractRole(token);
+
+            assertEquals("ADMIN", role);
+        }
+
+        @Test
+        @DisplayName("should default to USER role when no authorities present")
+        void shouldDefaultToUserRoleWhenNoAuthoritiesPresent() {
+            UserDetails userWithNoAuthorities = User.builder()
+                    .username("noauth@example.com")
+                    .password("password")
+                    .authorities(Collections.emptyList())
+                    .build();
+
+            String token = jwtService.generateToken(userWithNoAuthorities);
+
+            String role = jwtService.extractRole(token);
+
+            assertEquals("USER", role);
         }
     }
 
@@ -110,6 +164,53 @@ class JwtServiceTest {
             String tamperedToken = token.substring(0, token.length() - 5) + "xxxxx";
 
             assertThrows(SignatureException.class, () -> jwtService.extractUsername(tamperedToken));
+        }
+    }
+
+    @Nested
+    @DisplayName("extractRole")
+    class ExtractRole {
+
+        @Test
+        @DisplayName("should extract USER role from token")
+        void shouldExtractUserRoleFromToken() {
+            String token = jwtService.generateToken(userDetails);
+
+            String role = jwtService.extractRole(token);
+
+            assertEquals("USER", role);
+        }
+
+        @Test
+        @DisplayName("should extract ADMIN role from token")
+        void shouldExtractAdminRoleFromToken() {
+            String token = jwtService.generateToken(adminUserDetails);
+
+            String role = jwtService.extractRole(token);
+
+            assertEquals("ADMIN", role);
+        }
+
+        @Test
+        @DisplayName("should throw exception for invalid token")
+        void shouldThrowExceptionForInvalidToken() {
+            assertThrows(Exception.class, () -> jwtService.extractRole("invalid.token.here"));
+        }
+
+        @Test
+        @DisplayName("should return null when role claim is not present")
+        void shouldReturnNullWhenRoleClaimIsNotPresent() {
+            // Generate token with extra claims but no role
+            Map<String, Object> claims = new HashMap<>();
+            claims.put("customClaim", "value");
+            String token = jwtService.generateToken(claims, userDetails);
+
+            // The token won't have the auto-generated role, so it should return null
+            // Actually, since we use generateToken(Map, UserDetails), the role is NOT
+            // automatically added. Let's verify.
+            String role = jwtService.extractRole(token);
+
+            assertNull(role);
         }
     }
 
